<resources>
    <string name="app_name">AndroidBasic</string>
    <string name="action_settings">Settings</string>
    <string name="main_name">Name</string>
    <string name="main_age">Age</string>
    <string name="main_name_hint">Enter your name</string>
    <string name="main_age_hint">Enter your age</string>
    <string name="main_color">Fav. Color</string>
    <string name="main_welcome">Welcome</string>
    <string name="main_color_hint">6 or 8 digit hex code</string>
    <string name="colon">:</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="result_welcome">Hello,</string>

    <!--intent purpose-->
    <string name="person_key">personKey</string>
</resources>
